tests/snapshots/errors/invalid_escape_sequence.mc
// Test invalid escape sequence
let x = "hello\xworld";
